Bug 152637 - macOS: dark mode: calc: Format Cells: example text black on dark background
Summary: macOS: dark mode: calc: Format Cells: example text black on dark background
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.0.2 target:7.5.1
Keywords:
Depends on:
Blocks: macOS-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-12-21 23:57 UTC by steve
Modified: 2023-01-18 11:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
dark mode. wrong text color (96.24 KB, image/png)
2022-12-22 00:01 UTC, steve
Details
7.5.0.2 persisting as of 2023-01-18 (251.57 KB, image/png)
2023-01-18 09:24 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2022-12-21 23:57:09 UTC
Description:
example text in Format Cells dialog is black on dark background.

Steps to Reproduce:
Open calc and open Format Cells dialog

Actual Results:
Example text is black on dark background

Expected Results:
White example text on dark background


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2e8776c181d0e38a8d25481ac0eb33389940bf95
CPU threads: 8; OS: Mac OS X 13.1; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2022-12-22 00:01:11 UTC
Created attachment 184303 [details]
dark mode. wrong text color
Comment 2 Commit Notification 2022-12-22 12:11:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/70406ea7627e4bd5cf7ec590afc8a09db6c1a0eb

Related: tdf#152637 Erase after changing background color

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2022-12-22 12:11:51 UTC
a speculative fix, can't test right now
Comment 4 Commit Notification 2022-12-22 17:52:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/48310b25eac39534b429a5a36cd6a303f5307722

Related: tdf#152637 Erase after changing background color

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 steve 2022-12-23 14:04:35 UTC
Not fixed in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 780d55199e54fafc3784691d5cf716c1bb92b0aa
CPU threads: 8; OS: Mac OS X 13.1; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded

main build as of 2022-12-23
Comment 6 Caolán McNamara 2023-01-17 12:14:56 UTC
I reckon this must be with options, application colors, scheme: LibreOffice Dark  enabled (with "Auto" font color and a dark Document background). At least, with that I can reproduce this issue. And not specific to macOS in that case.
Comment 7 Commit Notification 2023-01-17 17:12:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bbf1d7faca7912016855b51a10c93a064675e213

tdf#152637 format cells example text black on dark background

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2023-01-17 17:13:10 UTC
looks good for me in trunk, backport to 7-5 in gerrit
Comment 9 steve 2023-01-18 09:24:04 UTC
Created attachment 184740 [details]
7.5.0.2 persisting as of 2023-01-18

@Caolán: this remains unresolved in my tests. See screenshot. Which mac are you testing on? This is 13.1 intel mac here.

Version: 7.5.0.2 (X86_64) / LibreOffice Community
Build ID: c0dd1bc3f1a385d110b88e26ece634da94921f58
CPU threads: 8; OS: Mac OS X 13.1; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 10 Caolán McNamara 2023-01-18 09:47:58 UTC
I don't expect to see it fixed in the 7-5 series yet. https://gerrit.libreoffice.org/c/core/+/145589 hasn't been merged there yet, only https://gerrit.libreoffice.org/c/core/+/145667 for the 7-6 series
Comment 11 steve 2023-01-18 11:22:04 UTC
Fixed, Verified - thanks Caolán

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ef558d0aab44421ad5cd8362724ff1410af1b480
CPU threads: 8; OS: Mac OS X 13.1; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded

Follow-up bug: https://bugs.documentfoundation.org/show_bug.cgi?id=153088
Comment 12 Commit Notification 2023-01-18 11:38:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0d31e4efae148e4c08a841fa52eb2849a093150b

tdf#152637 format cells example text black on dark background

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.