tdf#152637 format cells example text black on dark background

with application colors, scheme: LibreOffice Dark enabled

Change-Id: I56ac48ec2e6afd77f20a8581c6d872942618d802
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145667
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>